--- a/index.html
+++ b/index.html
@@ -11,5 +11,16 @@
 <body>
 
 
+  <script>
+    function geocode() {
+      var location = '22 Main st Boston MA';
+      axios.get('https://maps.googleapis.com/maps/api/geocode/json', {
+        params: {
+          address: location,
+          key: 'AIzaSyCVfKwRX3RhShZXVK3ByjXYlihEIsP1fjs'
+        }
+      });
+    }
+  </script>
 </body>
 </html>
