Add then() and catch() functions to axios

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
           address: location,
           key: 'AIzaSyCVfKwRX3RhShZXVK3ByjXYlihEIsP1fjs'
         }
+      })
+      .then(function(response) {
+        console.log(response);
+      })
+      .catch(function(error) {
+        console.log(error);
       });
     }
   </script>
