--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 
         // Formated address
         var formattedAddress = response.data.results[0].formatted_address;
+        var formattedAddressOutput = `
+          <ul class="list-group">
+            <li class="list-group-item">${formattedAddress}</li>
+          </ul>
+        `;
       })
       .catch(function(error) {
         console.log(error);
