--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   </div>
 
   <script>
+    geocode();
+
     function geocode() {
       var location = '22 Main st Boston MA';
       axios.get('https://maps.googleapis.com/maps/api/geocode/json', {
