--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
           </ul>
         `;
 
+        // Address components
+        var addressComponents = response.data.results[0].address_components;
+
         // Output to app
         document.getElementById('formatted-address').innerHTML =formattedAddressOutput;
       })
