--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
 
         // Address components
         var addressComponents = response.data.results[0].address_components;
+        var addressComponentsOutput = '<ul class="list-group">';
+        for(var i = 0; i < addressComponents.length; i++) {
+          addressComponentsOutput += `
+            <li class="list-group-item"><strong>${addressComponents[i].types[0]}</strong>: ${addressComponents[i].long_name}</li>
+          `;
+        }
+        addressComponentsOutput += '</ul>';
 
         // Output to app
         document.getElementById('formatted-address').innerHTML =formattedAddressOutput;
