Add card-block style to the outputs

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <div class="container">
-    <div id="formatted-address"></div>
-    <div id="address-components"></div>
+    <div class="card-block" id="formatted-address"></div>
+    <div class="card-block" id="address-components"></div>
   </div>
 
   <script>
