--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
         }
         addressComponentsOutput += '</ul>';
 
+        // Geometry
+        var lat = response.data.results[0].geometry.location.lat;
+        var lng = response.data.results[0].geometry.location.lng;
+
         // Output to app
         document.getElementById('formatted-address').innerHTML =formattedAddressOutput;
         document.getElementById('address-components').innerHTML = addressComponentsOutput;
