--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         // Geometry
         var lat = response.data.results[0].geometry.location.lat;
         var lng = response.data.results[0].geometry.location.lng;
+        var geometryOutput = `
+          <ul class="list-group">
+            <li class="list-group-item"><strong>Latitude: ${lat}</strong></li>
+            <li class="list-group-item"><strong>Longitude: ${lng}</strong></li>
+          </ul>
+        `;
 
         // Output to app
         document.getElementById('formatted-address').innerHTML =formattedAddressOutput;
