--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     geocode();
 
     function geocode() {
-      var location = '22 Main st Boston MA';
+      var location = 'Holland Village Singapore';
       axios.get('https://maps.googleapis.com/maps/api/geocode/json', {
         params: {
           address: location,
