--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
   <div class="container">
+    <h2 class="text-center">Enter location: </h2>
+    <form id="location-form">
+      <input type="text" id="location-input" class="form-control form-control-lg">
+      <br>
+      <button type="submit" class="btn btn-primary btn-block">Submit</button>
+    </form>
     <div class="card-block" id="formatted-address"></div>
     <div class="card-block" id="address-components"></div>
     <div class="card-block" id="geometry"></div>
