Stop invoke geocode() and reference locationForm

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
   </div>
 
   <script>
-    geocode();
+    // geocode();
+
+    // Get Location form
+    var locationForm = document.getElementById('location-form');
 
     function geocode() {
       var location = 'Holland Village Singapore';
